image test index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <div><img src="images/logo.png" alt="Jiwoolee name Logo" class="logo"></div>
+    <div><img src="https://github.com/joo009/joo-mediaweb-hw/blob/db673315cafdb133a80001545ed1ebf1a90d248e/logo.PNG" alt="Jiwoolee name Logo" class="logo"></div>
     <nav>
       <a href="#storyboard"> Storyboard </a>
       <a href="#gallery"> Life Drawing </a>
