--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <section id="gallery" class="gallery">
   <p class="Gallery-title"> Life Drawing </p>
   <div class="gallery-item">
-    <img src="images/IMG_8468.JPG" alt="LD1">
-    <img src="images/IMG_2175.jpg" alt="LD2">
-    <img src="images/IMG_0001.jpg" alt="LD3">
-    <img src="images/IMG_8478.JPG" alt="LD4">
-    <img src="images/IMG_4847.PNG" alt="LD5">
-    <img src="images/IMG_4845.PNG" alt="LD6">
+    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_8478.JPG" alt="LD1">
+    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_8477.JPG" alt="LD2">
+    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_8468.JPG" alt="LD3">
+    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_4847.PNG" alt="LD4">
+    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_4845.PNG" alt="LD5">
+    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_2175.jpg" alt="LD6">
   </div>
 </section>
 
