--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section id="gallery" class="gallery">
   <p class="Gallery-title"> Life Drawing </p>
   <div class="gallery-item">
-    <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_8478.JPG" alt="LD1">
+    <img src="http://joo009.github.io/joo-wediaweb-hw/IMG_8478.JPG" alt="LD1">
     <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_8477.JPG" alt="LD2">
     <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_8468.JPG" alt="LD3">
     <img src="https://github.com/joo009/joo-mediaweb-hw/blob/302c173ab9526cae8c98201eee2e4911a04a71c7/IMG_4847.PNG" alt="LD4">
