--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <div><img src="https://github.com/joo009/joo-mediaweb-hw/blob/db673315cafdb133a80001545ed1ebf1a90d248e/logo.PNG" alt="Jiwoolee Logo" class="logo"></div>
+    <div><img src="http://joo009.github.io/joo-wediaweb-hw/IMG_8478.JPG" alt="LD1"></div>
     <nav>
       <a href="#storyboard"> Storyboard </a>
       <a href="#gallery"> Life Drawing </a>
