--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <div><img src="https://github.com/joo009/joo-mediaweb-hw/blob/fb02574ce2dc9c4e7ca2804d0958ba60ef298392/logo.PNG" alt="logo"></div>
+    <div><img src="https://joo009.github.io/joo-mediaweb-hw/logo.PNG" alt="jiwooleelogo"></div>
     <nav>
       <a href="#storyboard"> Storyboard </a>
       <a href="#gallery"> Life Drawing </a>
