--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <div><img src="https://joo009.github.io/joo-mediaweb-hw/logo.PNG" alt="jiwooleelogo"></div>
+    <div><img src="https://joo009.github.io/joo-mediaweb-hw/joo-mediaweb-hw/logo.PNG" alt="jiwooleelogo"></div>
     <nav>
       <a href="#storyboard"> Storyboard </a>
       <a href="#gallery"> Life Drawing </a>
