--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <div><img src="https://joo009.github.io/joo-mediaweb-hw/joo-mediaweb-hw/logo.PNG" alt="jiwooleelogo"></div>
+    <div><img src="https://github.com/joo009/joo-mediaweb-hw/blob/2eb2be3f74a0e2687cd28400e2d691b841df19d5/logo.PNG" alt="logo"></div>
     <nav>
       <a href="#storyboard"> Storyboard </a>
       <a href="#gallery"> Life Drawing </a>
